changed font to Rubik fixed header alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap");
+
 html {
   box-sizing: border-box;
 }
@@ -8,7 +10,7 @@ html {
   border: 0;
   padding: 0;
   margin: 0;
-  font-family: system-ui, Arial, sans-serif;
+  font-family: Rubik, system-ui, Arial, sans-serif;
   background-color: inherit;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
@@ -26,6 +28,9 @@ header {
   background-color: skyblue;
   color: white;
   padding: 10px;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
 }
 div.sidebar {
   grid-area: sidebar;
